# 2048

./: README.md  argumentsparser.cpp  graphics.cpp  main.cpp
2048/: CMakeLists.txt  argumentsparser.cpp  game.cpp  graphics.cpp  main.cpp  window.cpp  window.hpp
2048/headers/: argumentsparser.hpp  game.hpp  graphics.hpp
2048/tests/: tests.cpp
headers/: game.hpp
